--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ noodles-bed = "0.26.0"
 noodles-core = "0.17.0"
 noodles-vcf = "0.79.0"
 noodles-sam = "0.77.0"
+flate2 = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+rayon = "1.8"
+num_cpus = "1.0"
