--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ noodles-bgzf = "0.41.0"
 flate2 = "1.0"
 rayon = "1.8"
 num_cpus = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+futures = "0.3"
+arc-swap = "1.6"
